index: add ajaxlist.js

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,7 @@
 
 			<div role="main">
 				<p>Let's play and have fun with jQuery Mobile.</p>
+				<script src="/js/ajaxlist.js"></script>
 			</div><!-- /content -->
 
 			<div data-role="footer">
