--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,11 @@
 
 			<div role="main">
 				<p>Let's play and have fun with jQuery Mobile.</p>
+				<h2>Play with listview</h2>
+				<ul id="listcountry" data-role="listview">
+					<li>Vietnam</li>
+					<li>United States</li>
+				</ul>
 				<script src="/js/ajaxlist.js"></script>
 			</div><!-- /content -->
 
