--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+		<script src="/js/ajaxlist.js"></script>
   </head>
   <body>
 		<div data-role="page">
@@ -20,7 +21,9 @@
 					<li>Vietnam</li>
 					<li>United States</li>
 				</ul>
-				<script src="/js/ajaxlist.js"></script>
+				<form>
+					<input type="button" value="Load country list" onclick="loadList()">
+				</form>
 			</div><!-- /content -->
 
 			<div data-role="footer">
